--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -5,13 +5,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
-#       - name: Publish to DockerHub
-#         uses: elgohr/Publish-Docker-Github-Action@master
-#         with:
-#           name: rookiezoe/nginx
-#           username: ${{ secrets.DOCKER_USERNAME }}
-#           password: ${{ secrets.DOCKER_PASSWORD }}
-#           dockerfile: ./nginx/Dockerfile
+      - name: Publish to DockerHub
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: rookiezoe/nginx
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          dockerfile: ./nginx/Dockerfile
       - name: Publish to docker.pkg.github.com
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
