--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -1,4 +1,4 @@
-name: nginx-alpine
+name: rsshub-alpine
 on:
   schedule:
     - cron: '0 2 28 * *'
@@ -10,15 +10,15 @@ jobs:
       - name: Publish to DockerHub
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: rookiezoe/nginx
+          name: rookiezoe/rsshub
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: ./nginx/Dockerfile
+          dockerfile: ./rsshub/Dockerfile
       - name: Publish to docker.pkg.github.com
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: docker.pkg.github.com/rookiezoe/containers/nginx
+          name: docker.pkg.github.com/rookiezoe/containers/rsshub
           username: ${{ secrets.GITHUB_DOCKER_USERNAME }}
           password: ${{ secrets.GITHUB_DOCKER_PASSWORD }}
-          dockerfile: ./nginx/Dockerfile
+          dockerfile: ./rsshub/Dockerfile
           registry: docker.pkg.github.com
