--- a/.github/workflows/trojan-alpine.yml
+++ b/.github/workflows/trojan-alpine.yml
@@ -1,5 +1,6 @@
-name: nginx-alpine
+name: trojan-alpine
 on:
+  push:
   schedule:
     - cron: '0 2 28 * *'
 jobs:
@@ -10,7 +11,7 @@ jobs:
       - name: Publish to DockerHub
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: rookiezoe/nginx
+          name: rookiezoe/trojan
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          dockerfile: ./nginx/Dockerfile
+          dockerfile: ./trojan/Dockerfile
