--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -17,11 +17,12 @@ jobs:
         run: |
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install jq
-          sudo -E apt-get -y autoremove --purge
-          sudo -E apt-get clean
           echo "::set-env name=NGINX_VERSION::$(echo -n $(curl -s https://api.github.com/repos/nginx/nginx/tags | jq -r 'sort_by(.name) | last | .name | split("release-") | .[1]'))"
           echo "::set-env name=NCHAN_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/slact/nchan/tags | jq -r 'sort_by(.name) | last | .tarball_url'))"
           echo "::set-env name=HEADERS_MORE_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/openresty/headers-more-nginx-module/tags | jq -r 'sort_by(.name) | last | .tarball_url'))"
+          echo "NGINX_VERSION=$(NGINX_VERSION)"
+          echo "NCHAN_LATEST_TAR=$(NCHAN_LATEST_TAR)"
+          echo "HEADERS_MORE_LATEST_TAR=$(HEADERS_MORE_LATEST_TAR)"
 
       - name: Publish to DockerHub
         uses: elgohr/Publish-Docker-Github-Action@master
