--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -14,18 +14,21 @@ jobs:
       - name: Set env
         env:
           DEBIAN_FRONTEND: noninteractive
+          REPO_NAME: rookiezoe/nginx
         run: |
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install jq
+          export latest_tag=$(echo -n $(curl -s "https://registry.hub.docker.com/v1/repositories/${REPO_NAME}/tags" | jq -r 'sort_by(.name) | first | .name'))
           echo ::set-env name=NGINX_VERSION::$(echo -n $(curl -s https://api.github.com/repos/nginx/nginx/tags | jq -r 'sort_by(.name) | last | .name | split("release-") | .[1]'))
           echo ::set-env name=NCHAN_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/slact/nchan/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
           echo ::set-env name=HEADERS_MORE_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/openresty/headers-more-nginx-module/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
+          [[ $NGINX_VERSION = $latest_tag ]]
 
       - name: Publish to DockerHub
         uses: elgohr/Publish-Docker-Github-Action@master
         if: success()
         with:
-          name: rookiezoe/nginx
+          name: ${{ env.REPO_NAME }}
           tags: 'latest,${{ env.NGINX_VERSION }}'
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
