--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -22,12 +22,13 @@ jobs:
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install jq
           export latest_tag=$(echo -n $(curl -s "https://registry.hub.docker.com/v1/repositories/${DOCKER_REPO_NAME}/tags" | jq -r 'sort_by(.name) | first | .name'))
-          echo ::set-env name=NGINX_VERSION::$(echo -n $(curl -s https://api.github.com/repos/nginx/nginx/tags | jq -r 'sort_by(.name) | last | .name | split("release-") | .[1]'))
+          export NGINX_VERSION=$(echo -n $(curl -s https://api.github.com/repos/nginx/nginx/tags | jq -r 'sort_by(.name) | last | .name | split("release-") | .[1]'))
+          echo ::set-env name=NGINX_VERSION::$NGINX_VERSION
           echo ::set-env name=NCHAN_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/slact/nchan/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
           echo ::set-env name=HEADERS_MORE_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/openresty/headers-more-nginx-module/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
           echo "NGINX_VERSION=$NGINX_VERSION"
           echo "latest_tag=$latest_tag"
-          [[ $NGINX_VERSION != $latest_tag ]] && exit 0
+          [[ $NGINX_VERSION != $latest_tag ]]; exit $?
 
       - name: Version not change
         if: failure()
