--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -26,13 +26,16 @@ jobs:
           echo ::set-env name=NGINX_VERSION::$NGINX_VERSION
           echo ::set-env name=NCHAN_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/slact/nchan/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
           echo ::set-env name=HEADERS_MORE_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/openresty/headers-more-nginx-module/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
-          echo "NGINX_VERSION=$NGINX_VERSION"
-          echo "latest_tag=$latest_tag"
           [[ $NGINX_VERSION != $latest_tag ]]; exit $?
 
       - name: Version not change
         if: failure()
-        run: echo "Nginx Version is not change, abort."
+        run: |
+          echo "NGINX_VERSION=$NGINX_VERSION"
+          echo "NCHAN_LATEST_TAR=$NCHAN_LATEST_TAR"
+          echo "HEADERS_MORE_LATEST_TAR=$HEADERS_MORE_LATEST_TAR"
+          echo "Nginx Version is not change, abort."
+          exit 0;
 
       - name: Publish to DockerHub
         uses: elgohr/Publish-Docker-Github-Action@master
