--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -26,10 +26,10 @@ jobs:
           echo ::set-env name=NGINX_VERSION::$NGINX_VERSION
           echo ::set-env name=NCHAN_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/slact/nchan/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
           echo ::set-env name=HEADERS_MORE_LATEST_TAR::$(echo -n $(curl -s https://api.github.com/repos/openresty/headers-more-nginx-module/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
-          [[ $NGINX_VERSION != $latest_tag ]]; exit $?
+          [[ $NGINX_VERSION == $latest_tag ]]; exit $?
 
       - name: Version not change
-        if: failure()
+        if: success()
         run: |
           echo "NGINX_VERSION=$NGINX_VERSION"
           echo "NCHAN_LATEST_TAR=$NCHAN_LATEST_TAR"
@@ -39,7 +39,7 @@ jobs:
 
       - name: Publish to DockerHub
         uses: elgohr/Publish-Docker-Github-Action@master
-        if: success()
+        if: failure()
         with:
           name: ${{ env.DOCKER_REPO_NAME }}
           tags: 'latest,${{ env.NGINX_VERSION }}'
