--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -1,10 +1,7 @@
 name: nginx-alpine
 on:
   schedule:
-    - cron: '0 2 28 * *'
-  push:
-    branches:
-      - master
+    - cron: '0 0 * * *'
 
 env:
   DOCKER_REPO_NAME: rookiezoe/nginx
