--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -1,16 +1,45 @@
 name: rsshub-alpine
 on:
   schedule:
-    - cron: '0 2 28 * *'
+    - cron: '0 0 * * *'
+  push:
+    branches:
+      - master
+
+env:
+  DOCKER_REPO_NAME: rookiezoe/rsshub
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+
+      - name: Set env
+        env:
+          DEBIAN_FRONTEND: noninteractive
+        run: |
+          sudo -E apt-get -qq update
+          sudo -E apt-get -qq install jq
+          export latest_tag=$(echo -n $(curl -s "https://registry.hub.docker.com/v1/repositories/${DOCKER_REPO_NAME}/tags" | jq -r 'sort_by(.name) | reverse | .[1].name'))
+          export LAST_COMMIT_DATETIME=$(echo -n $(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/DIYgod/RSSHub/commits | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate'))
+          export LAST_COMMIT="commit-$LAST_COMMIT_DATETIME"
+          echo ::set-env name=LAST_COMMIT::$LAST_COMMIT
+          [[ $LAST_COMMIT == $latest_tag ]]; exit $?
+
+      - name: Version not change
+        if: success()
+        run: |
+          echo "LAST_COMMIT=$LAST_COMMIT"
+          echo "No new commit, abort."
+          exit 0;
+
       - name: Publish to DockerHub
         uses: elgohr/Publish-Docker-Github-Action@master
+        if: failure()
         with:
-          name: rookiezoe/rsshub
+          name: ${{ env.DOCKER_REPO_NAME }}
+          tags: 'latest,${{ env.LAST_COMMIT }}'
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           dockerfile: ./rsshub/Dockerfile
