--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -20,12 +20,23 @@ jobs:
           DEBIAN_FRONTEND: noninteractive
         run: |
           sudo -E apt-get -qq update
-          sudo -E apt-get -qq install jq
+          sudo -E apt-get -qq install jq git
           export latest_tag=$(echo -n $(curl -s "https://registry.hub.docker.com/v1/repositories/${DOCKER_REPO_NAME}/tags" | jq -r 'sort_by(.name) | reverse | .[1].name'))
-          export NGINX_VERSION=$(echo -n $(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/nginx/nginx/tags | jq -r 'sort_by(.name) | last | .name | split("release-") | .[1]'))
+          git clone https://github.com/nginx/nginx.git $GITHUB_WORKSPACE/tmp/nginx
+          cd $GITHUB_WORKSPACE/tmp/nginx
+          export NGINX_VERSION=$(echo -n $(git describe --tags $(git rev-list --tags --max-count=1) | cut -d "-" -f2))
+          cd $GITHUB_WORKSPACE
+          git clone https://github.com/slact/nchan.git $GITHUB_WORKSPACE/tmp/nchan
+          cd $GITHUB_WORKSPACE/tmp/nchan
+          export NCHAN_LATEST_TAR="https://github.com/slact/nchan/archive/$(echo -n $(git describe --tags $(git rev-list --tags --max-count=1))).tar.gz"
+          cd $GITHUB_WORKSPACE
+          git clone https://github.com/openresty/headers-more-nginx-module.git $GITHUB_WORKSPACE/tmp/headers-more-nginx-module
+          cd $GITHUB_WORKSPACE/tmp/headers-more-nginx-module
+          export HEADERS_MORE_LATEST_TAR="https://github.com/openresty/headers-more-nginx-module/archive/$(echo -n $(git describe --tags $(git rev-list --tags --max-count=1))).tar.gz"
+          cd $GITHUB_WORKSPACE
           echo ::set-env name=NGINX_VERSION::$NGINX_VERSION
-          echo ::set-env name=NCHAN_LATEST_TAR::$(echo -n $(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/slact/nchan/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
-          echo ::set-env name=HEADERS_MORE_LATEST_TAR::$(echo -n $(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/openresty/headers-more-nginx-module/tags | jq -r 'sort_by(.name) | last | .tarball_url'))
+          echo ::set-env name=NCHAN_LATEST_TAR::$NCHAN_LATEST_TAR
+          echo ::set-env name=HEADERS_MORE_LATEST_TAR::$HEADERS_MORE_LATEST_TAR
           [[ $NGINX_VERSION == $latest_tag ]]; exit $?
 
       - name: Version not change
