--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -2,19 +2,26 @@ name: nginx-alpine
 on:
   schedule:
     - cron: '0 0 * * *'
+  push:
+    branches:
+      - master
 
 env:
   DOCKER_REPO_NAME: rookiezoe/nginx
 
 jobs:
-  build:
+  get_env:
     runs-on: ubuntu-latest
+    outputs:
+      NGINX_VERSION: ${{ steps.set_outputs.outputs.NGINX_VERSION }}
+      NCHAN_LATEST_TAR: ${{ steps.set_outputs.outputs.NCHAN_LATEST_TAR }}
+      HEADERS_MORE_LATEST_TAR: ${{ steps.set_outputs.outputs.HEADERS_MORE_LATEST_TAR }}
+      IS_VERSION_CHANGED: ${{ steps.set_outputs.outputs.IS_VERSION_CHANGED }}
     steps:
-      - uses: actions/checkout@master
-
-      - name: Set env
+      - id: set_outputs
         env:
           DEBIAN_FRONTEND: noninteractive
+        name: Set outputs
         run: |
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install jq git
@@ -31,33 +38,34 @@ jobs:
           cd $GITHUB_WORKSPACE/tmp/headers-more-nginx-module
           export HEADERS_MORE_LATEST_TAR="https://github.com/openresty/headers-more-nginx-module/archive/$(echo -n $(git describe --tags $(git rev-list --tags --max-count=1))).tar.gz"
           cd $GITHUB_WORKSPACE
-          echo ::set-env name=NGINX_VERSION::$NGINX_VERSION
-          echo ::set-env name=NCHAN_LATEST_TAR::$NCHAN_LATEST_TAR
-          echo ::set-env name=HEADERS_MORE_LATEST_TAR::$HEADERS_MORE_LATEST_TAR
-          [[ $NGINX_VERSION == $latest_tag ]]; exit $?
+          echo ::set-output name=NGINX_VERSION::$NGINX_VERSION
+          echo ::set-output name=NCHAN_LATEST_TAR::$NCHAN_LATEST_TAR
+          echo ::set-output name=HEADERS_MORE_LATEST_TAR::$HEADERS_MORE_LATEST_TAR
+          [[ $NGINX_VERSION == $latest_tag ]]; echo ::set-output name=IS_VERSION_CHANGED::$?
 
-      - name: Version not change
-        if: success()
+  echo_env:
+    runs-on: ubuntu-latest
+    needs: get_env
+    steps:
+      - name: Echo env
         run: |
-          echo "NGINX_VERSION=$NGINX_VERSION"
-          echo "NCHAN_LATEST_TAR=$NCHAN_LATEST_TAR"
-          echo "HEADERS_MORE_LATEST_TAR=$HEADERS_MORE_LATEST_TAR"
-          echo "Nginx Version is not change, abort."
-          exit 0
+          echo NGINX_VERSION=${{ needs.get_env.outputs.NGINX_VERSION }}
+          echo NCHAN_LATEST_TAR=${{ needs.get_env.outputs.NCHAN_LATEST_TAR }}
+          echo HEADERS_MORE_LATEST_TAR=${{ needs.get_env.outputs.HEADERS_MORE_LATEST_TAR }}
+          echo IS_VERSION_CHANGED=${{ needs.get_env.outputs.IS_VERSION_CHANGED }}
 
+  publish:
+    if: ${{ needs.get_env.outputs.IS_VERSION_CHANGED }}
+    runs-on: ubuntu-latest
+    needs: [get_env, echo_env]
+    steps:
+      - uses: actions/checkout@master
       - name: Publish to DockerHub
-        uses: elgohr/Publish-Docker-Github-Action@master
-        if: failure()
+        uses: docker/build-push-action@v1
         with:
           name: ${{ env.DOCKER_REPO_NAME }}
-          tags: 'latest,${{ env.NGINX_VERSION }}'
+          tags: latest,${{ needs.get_env.outputs.NGINX_VERSION }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          buildargs: NCHAN_LATEST_TAR,HEADERS_MORE_LATEST_TAR
+          build_args: NCHAN_LATEST_TAR=${{ needs.get_env.outputs.NCHAN_LATEST_TAR }},HEADERS_MORE_LATEST_TAR=${{ needs.get_env.outputs.HEADERS_MORE_LATEST_TAR }}
           dockerfile: ./nginx/Dockerfile
-
-      - name: Finished
-        if: failure()
-        run: |
-          echo "Finished"
-          exit 0
