--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -2,47 +2,44 @@ name: rsshub-alpine
 on:
   schedule:
     - cron: '0 0 * * *'
+  push:
+    branches:
+      - master
 
 env:
   DOCKER_REPO_NAME: rookiezoe/rsshub
 
 jobs:
-  build:
+  get_env:
     runs-on: ubuntu-latest
+    outputs:
+      LAST_COMMIT: ${{ steps.set_outputs.outputs.LAST_COMMIT }}
+      IS_COMMIT_CHANGED: ${{ steps.set_outputs.outputs.IS_COMMIT_CHANGED }}
     steps:
-      - uses: actions/checkout@master
-
-      - name: Set env
+      - id: set_outputs
         env:
           DEBIAN_FRONTEND: noninteractive
+        name: Set outputs
         run: |
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install jq
           export latest_tag=$(echo -n $(curl -s "https://registry.hub.docker.com/v1/repositories/${DOCKER_REPO_NAME}/tags" | jq -r 'sort_by(.name) | reverse | .[1].name'))
           export LAST_COMMIT_DATETIME=$(echo -n $(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/DIYgod/RSSHub/commits | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate'))
           export LAST_COMMIT="commit-$LAST_COMMIT_DATETIME"
-          echo ::set-env name=LAST_COMMIT::$LAST_COMMIT
-          [[ $LAST_COMMIT == $latest_tag ]]; exit $?
+          echo ::set-output name=LAST_COMMIT::$LAST_COMMIT
+          [[ $LAST_COMMIT == $latest_tag ]]; echo ::set-output name=IS_COMMIT_CHANGED::$?
 
-      - name: No new commit
-        if: success()
-        run: |
-          echo "LAST_COMMIT=$LAST_COMMIT"
-          echo "No new commit, abort."
-          exit 0
-
+  publish:
+    if: needs.get_env.outputs.IS_COMMIT_CHANGED != 0
+    runs-on: ubuntu-latest
+    needs: get_env
+    steps:
+      - uses: actions/checkout@master
       - name: Publish to DockerHub
-        uses: elgohr/Publish-Docker-Github-Action@master
-        if: failure()
+        uses: docker/build-push-action@v1
         with:
           name: ${{ env.DOCKER_REPO_NAME }}
-          tags: 'latest,${{ env.LAST_COMMIT }}'
+          tags: latest,${{ needs.get_env.outputs.LAST_COMMIT }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           dockerfile: ./rsshub/Dockerfile
-
-      - name: Finished
-        if: failure()
-        run: |
-          echo "Finished"
-          exit 0
