--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -13,8 +13,8 @@ jobs:
   get_env:
     runs-on: ubuntu-latest
     outputs:
+      LATEST_TAG: ${{ steps.set_outputs.outputs.LATEST_TAG }}
       LAST_COMMIT: ${{ steps.set_outputs.outputs.LAST_COMMIT }}
-      IS_COMMIT_CHANGED: ${{ steps.set_outputs.outputs.IS_COMMIT_CHANGED }}
     steps:
       - id: set_outputs
         env:
@@ -23,14 +23,14 @@ jobs:
         run: |
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install jq
-          export latest_tag=$(echo -n $(curl -s "https://registry.hub.docker.com/v1/repositories/${DOCKER_REPO_NAME}/tags" | jq -r 'sort_by(.name) | reverse | .[1].name'))
+          export LATEST_TAG=$(echo -n $(curl -s "https://registry.hub.docker.com/v1/repositories/${DOCKER_REPO_NAME}/tags" | jq -r 'sort_by(.name) | reverse | .[1].name'))
           export LAST_COMMIT_DATETIME=$(echo -n $(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/DIYgod/RSSHub/commits | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate'))
           export LAST_COMMIT="commit-$LAST_COMMIT_DATETIME"
+          echo ::set-output name=LATEST_TAG::$LATEST_TAG
           echo ::set-output name=LAST_COMMIT::$LAST_COMMIT
-          [[ $LAST_COMMIT == $latest_tag ]]; echo ::set-output name=IS_COMMIT_CHANGED::$?
 
   publish:
-    if: needs.get_env.outputs.IS_COMMIT_CHANGED != 0
+    if: needs.get_env.outputs.LATEST_TAG != needs.get_env.outputs.LAST_COMMIT
     runs-on: ubuntu-latest
     needs: get_env
     steps:
