--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -1,7 +1,7 @@
 name: rsshub-alpine
 on:
   schedule:
-    - cron: '0 0 * * *'
+    - cron: '0 0 1 * *'
 
 env:
   DOCKER_REPO_NAME: rookiezoe/rsshub
@@ -11,8 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       LATEST_TAG: ${{ steps.set_outputs.outputs.LATEST_TAG }}
-      LAST_COMMIT: ${{ steps.set_outputs.outputs.LAST_COMMIT }}
-      LAST_COMMIT_DATETIME: ${{ steps.set_outputs.outputs.LAST_COMMIT_DATETIME }}
+      LATEST_COMMIT: ${{ steps.set_outputs.outputs.LATEST_COMMIT }}
     steps:
       - id: set_outputs
         env:
@@ -22,14 +21,13 @@ jobs:
           sudo -E apt-get -qq update
           sudo -E apt-get -qq install jq
           export LATEST_TAG=$(echo -n $(curl -s "https://registry.hub.docker.com/v1/repositories/${DOCKER_REPO_NAME}/tags" | jq -r 'sort_by(.name) | reverse | .[1].name'))
-          export LAST_COMMIT_DATETIME=$(echo -n $(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/DIYgod/RSSHub/commits | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate'))
-          export LAST_COMMIT="commit-$LAST_COMMIT_DATETIME"
+          export LATEST_COMMIT_DATETIME=$(echo -n $(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/DIYgod/RSSHub/commits | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate'))
+          export LATEST_COMMIT="commit-$LATEST_COMMIT_DATETIME"
           echo ::set-output name=LATEST_TAG::$LATEST_TAG
-          echo ::set-output name=LAST_COMMIT::$LAST_COMMIT
-          echo ::set-output name=LAST_COMMIT_DATETIME::$LAST_COMMIT_DATETIME
+          echo ::set-output name=LATEST_COMMIT::$LATEST_COMMIT
 
   publish:
-    if: needs.get_env.outputs.LATEST_TAG != needs.get_env.outputs.LAST_COMMIT
+    if: needs.get_env.outputs.LATEST_TAG != needs.get_env.outputs.LATEST_COMMIT
     runs-on: ubuntu-latest
     needs: get_env
     steps:
@@ -37,8 +35,7 @@ jobs:
       - name: Publish to DockerHub
         uses: docker/build-push-action@v1
         with:
-          tags: latest,${{ needs.get_env.outputs.LAST_COMMIT }}
-#           labels: LAST_COMMIT_DATETIME=${{ needs.get_env.outputs.LAST_COMMIT_DATETIME }}
+          tags: latest,${{ needs.get_env.outputs.LATEST_COMMIT }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: ${{ env.DOCKER_REPO_NAME }}
