--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -2,6 +2,8 @@ name: nginx-alpine
 on:
   schedule:
     - cron: '0 0 * * *'
+  push:
+    branches: master
 
 env:
   DOCKER_REPO_NAME: rookiezoe/nginx
