--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -48,12 +48,16 @@ jobs:
     needs: get_env
     steps:
       - uses: actions/checkout@master
-      - name: Publish to DockerHub
-        uses: docker/build-push-action@v1
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          tags: latest,${{ needs.get_env.outputs.NGINX_VERSION }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ env.DOCKER_REPO_NAME }}
-          build_args: nginx_version=${{ needs.get_env.outputs.NGINX_VERSION }},nchan_latest_tar=${{ needs.get_env.outputs.NCHAN_LATEST_TAR }},headers_more_latest_tar=${{ needs.get_env.outputs.HEADERS_MORE_LATEST_TAR }}
-          dockerfile: ./nginx/Dockerfile
+      - name: Publish to DockerHub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: latest,${{ needs.get_env.outputs.NGINX_VERSION }}
+          context: ./nginx
+          build-args: nginx_version=${{ needs.get_env.outputs.NGINX_VERSION }},nchan_latest_tar=${{ needs.get_env.outputs.NCHAN_LATEST_TAR }},headers_more_latest_tar=${{ needs.get_env.outputs.HEADERS_MORE_LATEST_TAR }}
