--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -34,11 +34,14 @@ jobs:
     needs: get_env
     steps:
       - uses: actions/checkout@master
-      - name: Publish to DockerHub
-        uses: docker/build-push-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
-          tags: latest,${{ needs.get_env.outputs.LATEST_COMMIT }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: ${{ env.DOCKER_REPO_NAME }}
-          dockerfile: ./rsshub/Dockerfile
+      - name: Publish to DockerHub
+        uses: docker/build-push-action@v2
+        with:
+          push: true
+          tags: latest,${{ needs.get_env.outputs.LATEST_COMMIT }}
+          context: ./rsshub
