error: "./configure: error: invalid option -g"

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -26,8 +26,9 @@ RUN apk add --no-cache --virtual .build-deps \
   geoip-dev
 
 # Reuse same cli arguments as the nginx:alpine image used to build
+# RUN CONFARGS=$(nginx -V 2>&1 | sed -n -e 's/^.*arguments: //p') && \
+#   CONFARGS=${CONFARGS/-Os -fomit-frame-pointer/-Os} && \
 RUN CONFARGS=$(nginx -V 2>&1 | sed -n -e 's/^.*arguments: //p') && \
-  CONFARGS=${CONFARGS/-Os -fomit-frame-pointer/-Os} && \
   mkdir /usr/src && \
   tar -zxC /usr/src -f nginx.tar.gz && \
   mkdir ./nchan && \
