--- a/.github/workflows/xray-alpine.yml
+++ b/.github/workflows/xray-alpine.yml
@@ -32,8 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: get_env
     steps:
-      - uses: actions/checkout@master
-
+      - uses: actions/checkout@v2
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
