--- a/.github/workflows/nginx-alpine.yml
+++ b/.github/workflows/nginx-alpine.yml
@@ -2,6 +2,7 @@ name: nginx-alpine
 on:
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch:
   repository_dispatch:
     types: 'build-nginx'
 
