--- a/.github/workflows/xray-alpine.yml
+++ b/.github/workflows/xray-alpine.yml
@@ -2,6 +2,7 @@ name: xray-alpine
 on:
   schedule:
     - cron: '0 0 * * *'
+  workflow_dispatch:
   repository_dispatch:
     types: 'build-xray'
 
