--- a/xray/Dockerfile
+++ b/xray/Dockerfile
@@ -8,8 +8,8 @@ RUN set -ex \
   && mkdir -p /var/log/xray /usr/local/share/xray \
   && chmod +x /download-xray.sh \
   && /download-xray.sh $xray_version \
-  && wget -O /geoip.dat https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geoip.dat > /dev/null 2>&1 \
-  && wget -O /geosite.dat https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geosite.dat > /dev/null 2>&1
+  && wget -O /usr/local/share/xray/geoip.dat https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geoip.dat >/dev/null 2>&1 \
+  && wget -O /usr/local/share/xray/geosite.dat https://github.com/Loyalsoldier/v2ray-rules-dat/releases/latest/download/geosite.dat >/dev/null 2>&1
 
 FROM alpine:latest
 LABEL maintainer="Rookie_Zoe <i@rookiezoe.com>"
@@ -20,9 +20,9 @@ WORKDIR /root
 COPY config.json /etc/xray/config.json
 COPY docker-entrypoint.sh /docker-entrypoint.sh
 COPY 10-envsubst-on-templates.sh /docker-entrypoint.d/10-envsubst-on-templates.sh
-COPY --from=builder /geoip.dat /usr/local/share/xray/geoip.dat
-COPY --from=builder /geosite.dat /usr/local/share/xray/geosite.dat
 COPY --from=builder /xray /usr/bin/xray
+COPY --from=builder /var/log/xray /var/log/xray
+COPY --from=builder /usr/local/share/xray /usr/local/share/xray
 
 RUN set -ex \
   && apk add --no-cache tzdata ca-certificates \
@@ -38,7 +38,6 @@ RUN set -ex \
   && apk add --no-cache $runDeps \
   && apk del .gettext \
   && mv /tmp/envsubst /usr/local/bin/ \
-  && mkdir -p /var/log/xray /usr/local/share/xray \
   && chmod +x /docker-entrypoint.sh \
   && chmod +x /docker-entrypoint.d/* \
   && chmod +x /usr/bin/xray
