[rsshub] use selfhost branch

--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -23,7 +23,7 @@ jobs:
           sudo -E apt-get -qq install jq
           export QUREY_PARAMS="?page_size=2&page=1&ordering=last_updated"
           export LATEST_TAG=$(echo -n $(curl -s "https://hub.docker.com/v2/repositories/${DOCKER_REPO_NAME}/tags/${QUREY_PARAMS}" | jq -r '.results | sort_by(.name) | first | .name'))
-          export RSSHUB_VERSION=$(echo -n $(date -d@$(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s https://api.github.com/repos/RookieZoe/RSSHub/commits | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate') +'%y.%m.%d'))
+          export RSSHUB_VERSION=$(echo -n $(date -d@$(curl -u $GITHUB_USERNAME:$GITHUB_TOKEN -s 'https://api.github.com/repos/RookieZoe/RSSHub/commits?sha=selfhost' | jq -r 'sort_by(.commit.author.date) | last | .commit.author.date | fromdate') +'%y.%m.%d'))
           echo ::set-output name=LATEST_TAG::$LATEST_TAG
           echo ::set-output name=RSSHUB_VERSION::$RSSHUB_VERSION
 
