rsshub: multi-platform build

--- a/rsshub/Dockerfile
+++ b/rsshub/Dockerfile
@@ -1,29 +1,36 @@
-FROM node:12-alpine AS builder
+FROM --platform=$TARGETPLATFORM node:14-alpine3.14 AS builder
 
+ARG RSSHub
 ENV NODE_ENV production
 ENV TZ Asia/Shanghai
 
+WORKDIR /RSSHub
+ADD ${RSSHub} /RSSHub
 RUN apk add --no-cache --virtual .build-deps \
   dumb-init \
   git \
-  python \
+  python3 \
   vips-dev \
   fftw-dev \
   build-base
 
-RUN cd / && \
-  git clone -b selfhost --single-branch https://github.com/RookieZoe/RSSHub.git /RSSHub && \
-  cd /RSSHub && \
-  export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && \
-  yarn --production
+RUN export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && \
+  yarn config delete proxy && \
+  yarn install --network-timeout 1000000 --production
 
-FROM node:12-alpine
+RUN mkdir -p /app && \
+  mv /RSSHub/api /app/api && \
+  mv /RSSHub/lib /app/lib && \
+  mv /RSSHub/node_modules /app/node_modules && \
+  mv /RSSHub/package.json /app/package.json
+
+FROM --platform=$TARGETPLATFORM node:14-alpine3.14
 LABEL maintainer="Rookie_Zoe <i@rookiezoe.com>"
+ENV NODE_ENV production
+ENV TZ Asia/Shanghai
 WORKDIR /app
-COPY --from=builder /usr/bin/dumb-init /usr/bin/dumb-init
-COPY --from=builder /RSSHub/lib /app/lib
-COPY --from=builder /RSSHub/node_modules /app/node_modules
-COPY --from=builder /RSSHub/package.json /app/package.json
 EXPOSE 1200
 ENTRYPOINT ["dumb-init", "--"]
 CMD ["yarn", "start"]
+COPY --from=builder /usr/bin/dumb-init /usr/bin/dumb-init
+COPY --from=builder /app /app
