--- a/.github/workflows/rsshub-alpine.yml
+++ b/.github/workflows/rsshub-alpine.yml
@@ -33,6 +33,15 @@ jobs:
     needs: get_env
     steps:
       - uses: actions/checkout@v2
+      - name: checkout rsshub
+        run: |
+          sudo -E apt-get -qq update
+          sudo -E apt-get -qq install git
+          git clone -b selfhost --single-branch https://github.com/RookieZoe/RSSHub.git $GITHUB_WORKSPACE/rsshub/RSSHub
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -44,3 +53,6 @@ jobs:
           push: true
           tags: ${{ env.DOCKER_REPO_NAME }}:latest,${{ env.DOCKER_REPO_NAME }}:${{ needs.get_env.outputs.RSSHUB_VERSION }}
           context: ./rsshub
+          platforms: linux/amd64,linux/arm/v7,linux/arm64
+          build-args: |
+            RSSHub=RSSHub
